# BD_macro_models_sim

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_GUIDE.md  ORGANIZATION_STATUS.md  PROJECT_IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_FINAL.md  README.md  cleanup_organization.py  config.yaml  config_template.py  final_organization_summary.py  main.py  pyproject.toml  pytest.ini  reorganize_project.py  requirements.txt
.github/workflows/: ci.yml
analysis/: README.md  analysis_framework.py
analysis/policy_analysis/: policy_scenario_analyzer.py
analysis/validation/: model_validator.py
config/: default.yaml
data/processed/: bangladesh_macroeconomic_data.csv  bangladesh_time_series_data.csv  bd_processed_data_20250724_113348.csv  bd_processed_data_20250724_113348.parquet  bd_processed_data_20250724_113348_metadata.json  data_summary_report.md
data/processed/model_exports/: bangladesh_cge_data.csv  bangladesh_dsge_data.csv  bangladesh_financial_data.csv  bangladesh_olg_data.csv  bangladesh_svar_data.csv
data/raw/: bangladesh_wb_data.csv
docs/: user_guide.md
models/abm/: __init__.py  abm_model.py
models/behavioral/: __init__.py
models/cge/: __init__.py  cge_model.py
models/dsge/: __init__.py  dsge_model.py
models/financial/: __init__.py  financial_model.py
models/game_theory/: __init__.py  game_theory_model.py
models/hank/: __init__.py
models/iam/: __init__.py  iam_model.py
models/neg/: __init__.py
models/olg/: __init__.py
models/qmm/: __init__.py  qmm_model.py
models/rbc/: __init__.py  rbc_model.py
models/search_matching/: __init__.py  search_matching_model.py
models/small_open_economy/: __init__.py
models/svar/: __init__.py  svar_model.py
outputs/analysis_outputs/policy_analysis/: detailed_policy_impacts.csv  policy_analysis_report.md  policy_effectiveness_results.csv  policy_model_agreement.csv  policy_scenario_ranking.csv
outputs/analysis_outputs/reports/: analysis_configuration.json  analysis_summary.csv
outputs/analysis_outputs/simulations/: simulation_analysis_climate_risk_assessment.csv  simulation_analysis_policy_uncertainty_analysis.csv  simulation_analysis_report.md  simulation_configuration.json
outputs/benchmarks/: benchmark_results_20250724_113453.json  benchmark_results_20250724_114519.json
outputs/reports/: 01_ABM_Model_Analysis.md  09_IAM_Model_Analysis.md  11_OLG_Model_Analysis.md  12_QMM_Model_Analysis.md  13_RBC_Model_Analysis.md  14_search_matching_model_analysis.md
outputs/results/: dsge_results.csv  financial_results.csv  neg_results.csv  olg_results.csv  qmm_results.csv  soe_results.csv  svar_fevd_results.csv  svar_results.csv
reports/: 02_SVAR_Model_Analysis.md  03_DSGE_Model_Analysis.md  04_CGE_Model_Analysis.md  05_HANK_Model_Analysis.md  06_Behavioral_Model_Analysis.md  07_Financial_Model_Analysis.md  08_Game_Theory_Model_Analysis.md  10_NEG_Model_Analysis.md  15_soe_model_analysis.md
results/: abm_results.csv  behavioral_results.csv  cge_results.csv  dsge_results.csv  game_theory_results.csv  hank_results.csv  iam_results.csv  qmm_results.csv  rbc_results.csv  search_matching_results.csv  svar_irf_results.csv
scripts/: benchmark_models.py  collect_bd_data.py  evaluate_models.py  fetch_real_data.py  fetch_time_series.py  preprocess_data.py  run_all_models.py  run_individual_model.py  setup_environment.py  train_models.py  working_data_demo.py
scripts/data_collection/: data_manager.py  demo_data_integration.py  test_data_access.py
scripts/model_execution/: run_all_models.py
src/: bangladesh_economic_analysis.py  bangladesh_economic_outlook_2025.py  data_fetcher.py  example_analysis.py  policy_scenario_analysis.py
src/analysis/comprehensive_analysis/policy_analysis/: policy_analysis_summary.json  policy_indicator_impacts.csv  policy_policy_type_comparison.csv
src/analysis/comprehensive_analysis/reports/: comprehensive_analysis_report.md
src/analysis/comprehensive_analysis/simulations/: simulation_analysis_baseline_economic_uncertainty.csv  simulation_analysis_external_shock_analysis.csv  simulation_analysis_financial_stress_testing.csv  simulation_risk_metrics.csv  simulation_summary_statistics.csv
src/analysis/forecasting/: comparative_forecasting.py
src/analysis/simulations/: monte_carlo_simulator.py
src/config/: __init__.py  config_manager.py
src/models/behavioral/: behavioral_model.py
src/models/cge/: cge_model.py
src/models/game_theory/: game_theory_model.py
src/models/hank/: hank_model.py
src/models/neg/: neg_model.py
src/models/olg/: olg_model.py
src/models/small_open_economy/: soe_model.py
src/models/svar/: svar_model.py
src/utils/: __init__.py  error_handling.py  logging_config.py  performance_monitor.py
tests/integration/: test_model_integration.py
tests/unit/: test_cge_model.py  test_dsge_model.py
tests/validation/: test_data_validation.py
utils/data_processing/: data_loader.py
